<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        android:title="@string/settings_category_connection">

        <EditTextPreference
            android:key="api"
            android:title="@string/settings_api_title"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:key="webui"
            android:title="@string/settings_webui_title"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        android:title="@string/settings_category_power">

        <SwitchPreference
            android:key="lowpower"
            android:title="@string/settings_lowpower_title"
            android:defaultValue="false"
            android:summary="@string/settings_lowpower_summary"
            app:iconSpaceReserved="false" />

        <SeekBarPreference
            android:key="interval"
            android:title="@string/settings_interval_title"
            android:defaultValue="1"
            android:summary="@string/settings_interval_summary"
            android:max="60"
            app:min="1"
            app:showSeekBarValue="true"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen>